--- a/p8/p8/src/sass/main.scss
+++ b/p8/p8/src/sass/main.scss
@@ -1,3 +1,3 @@
-@import 'sass/_reset';
-@import 'sass/_variables';
-@import 'sass/mixins';
+@import '../sass/reset';
+@import '../sass/variables';
+@import '../sass/mixins';
