--- a/p8/p8/src/Components/Navbar/Navbar.scss
+++ b/p8/p8/src/Components/Navbar/Navbar.scss
@@ -3,7 +3,6 @@
 .nav_list{
     display: flex;
     gap: 50px;
-    color: $color-secondary;
     font-size: clamp(12px, 2.5vw, 24px);
     @media screen and (max-width: 700px){
         gap: 20px;
@@ -11,9 +10,8 @@
     &_item{
         &_active{
             position: relative;
-            color: $color-secondary;
             transition: all 0.2s ease-in-out;
-            text-decoration: underline solid $color-secondary; 
+            text-decoration: underline solid; 
             
         }
     }
