--- a/p8/p8/src/Components/Navbar/Navbar.scss
+++ b/p8/p8/src/Components/Navbar/Navbar.scss
@@ -4,8 +4,10 @@
     display: flex;
     gap: 50px;
     font-size: clamp(12px, 2.5vw, 24px);
+    color: black;
     @media screen and (max-width: 700px){
         gap: 20px;
+        text-transform: uppercase;
     }
     &_item{
         &_active{
