--- a/p8/p8/src/pages/NotFound/NotFound.scss
+++ b/p8/p8/src/pages/NotFound/NotFound.scss
@@ -27,6 +27,7 @@
             margin: 0 auto;
             font-weight: 500;
             font-size: clamp(12px, 2.5vw, 18px);
+            color: black;
 
             &:hover::after{
                 width: 100%;
